Bugfix: use overflow auto
This will make scroll bars only appear if there's enough content to scroll.

--- a/css/all.styl
+++ b/css/all.styl
@@ -59,7 +59,7 @@ full-page() {
         }
 
         .react-win-dialog-content {
-            overflow: scroll;
+            overflow: auto;
             flex-grow: 1;
         }
 
